--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@
 *{
   padding:0;
   margin:0;
-  font-family: 'Oswald',Times, sans-serif;
+  font-family: 'Oswald',Arial, sans-serif;
 }
 #main-header{
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
-#body-container{
+.body-container{
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
@@ -215,6 +215,6 @@ img{
 }
 
 /* margin bottom of page */
-#bottom-margin{
+.bottom-margin{
   margin-bottom: 125px;
 }
