--- a/css/style.css
+++ b/css/style.css
@@ -79,17 +79,6 @@ img{
 }
 
 /* video example stuff  */
-#showcase-vid{
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-}
-.video-embed{
-  width:100%;
-  height:100%;
-}
 #video-example-ul{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -216,4 +205,15 @@ img{
 /* margin bottom of page */
 .bottom-margin{
   margin-bottom: 125px;
+}
+
+/* Responsive Design */
+/*Tablet Landscape */
+@media screen and (max-width: 1060px){
+  #main-header{
+    width: 85%;
+  }
+  .body-container{
+    width: 75%;
+  }
 }
